# SceneDebugger

./: .gitignore  CMakeLists.txt  Camera.h  LICENSE  README.md  Shader.h  fragment_shader.glsl  main.cpp  vertex_shader.glsl
